--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,10 +1,10 @@
 @font-face
-  font-family: 'icon'
-  src: url('../fonts/icon.eot?2qevqt')
-  src: url('../fonts/icon.eot?2qevqt#iefix') format('embedded-opentype'),
-          url('../fonts/icon.ttf?2qevqt') format('truetype'),
-          url('../fonts/icon.woff?2qevqt') format('woff'),
-          url('../fonts/icon.svg?2qevqt#icon') format('svg')
+  font-family: 'music-icon'
+  src: url('../fonts/music-icon.eot?2qevqt')
+  src: url('../fonts/music-icon.eot?2qevqt#iefix') format('embedded-opentype'),
+          url('../fonts/music-icon.ttf?2qevqt') format('truetype'),
+          url('../fonts/music-icon.woff?2qevqt') format('woff'),
+          url('../fonts/music-icon.svg?2qevqt#music-icon') format('svg')
   font-weight: normal
   font-style: normal
 
