--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,13 +1,18 @@
 body, html
-  line-height: 1
   font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback'
   font-size: 14px
+  line-height: 1
+  height: 100%
   user-select: none
   -webkit-tap-highlight-color: transparent
 
-::-webkit-scrollbar
-  display: none
-
-*
+div
 	box-sizing: border-box
-	
+
+input
+	width: 100%
+	outline: none
+	box-sizing: border-box
+
+::-webkit-scrollbar
+  display: none	
