--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -10,9 +10,10 @@ div
 	box-sizing: border-box
 
 input
-	width: 100%
-	outline: none
-	box-sizing: border-box
+  width: 100%
+  outline: none
+  padding: 10px 0
+  box-sizing: border-box
 
 ::-webkit-scrollbar
-  display: none	
+  display: none
